# portfolio_EA

./: .gitignore  README.md  backend_test.py  design_guidelines.json  index.html
.emergent/: emergent.yml
Guided Project_ Profitable App Profiles for the App Store and Google Play Markets/: Basics.ipynb
Hacker News – Analyse de l’engagement des publications/: README.md
Streamlit_Data_Lab/: README.md  dev_streamlit.ipynb
amazon-product-scraper/: README.md  canapes_clean.csv  requirements.txt  scraper_canapes_fixed.ipynb  scraper_canapes_light.py
analyse-campagne-marketing-bancaire/: README.md  analyse banque.ipynb  gitignore  requirements.txt
analyse-sql-locations-films/: README.md  analyse_sql_locations_films.ipynb
analyse-systeme-educatif-mondial/: .gitignore  ENDAYE_Aime_2_102025pyproject.toml  ENDAYE_Aime_2_notebook_analyse_102025.ipynb  README.md
analyse_centrales_electriques_europe/: README.md  analyse_visualisation_centrales_europe.ipynb  requirements.txt
audit-architecture-olap-supermarket/: .$Diagramme sans nom.drawio.bkp  Copie+de+Extraction+cube+OLAP+-+14+aout+2024.xlsx  Diagramme sans nom.drawio  Dictionnaire_donnees_OLAP_SuperSmartMarket.xlsx  README.md  calendrier.csv  clients.csv  donne_marcher.sqbpro  employe.csv  produit.csv
backend/: requirements.txt  server.py
base-donnees-immobilier-analyse-sql/: .$ENDAYE_Aime_6_Diagramme_immo.drawio.bkp  ENDAYE_Aime_1_donnee_immo.sqbpro  README.md  (+10 more)
energy-prediction-machine-learning-model/project-6-energy-forecast/: .dockerignore  bentofile.yaml  pyproject.toml  readme.md  schemas.py  service.py
(+78 files in other folders)
